--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,7 +4,27 @@
 }
 
 body {
-    /* background: #54b1d6;
-    background: radial-gradient(circle, rgba(84, 177, 214, 1) 0%, rgba(91, 222, 167, 1) 75%); */
     background-color: rgb(240, 240, 240);
+}
+
+input {
+    width: 100%;
+    border-radius: 5px;
+    margin: 10px 0;
+    box-sizing: border-box;
+    padding: 5px;
+}
+
+.center {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    padding: 5px;
+}
+
+img {
+    cursor: pointer;
 }
