--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,10 +3,6 @@
     padding: 0;
 }
 
-ul li {
-    list-style: none;
-}
-
 body {
     background-color: rgb(240, 240, 240);
 }
@@ -32,4 +28,49 @@ button {
 
 img {
     cursor: pointer;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+p,
+ul,
+ol,
+li,
+blockquote,
+fieldset {
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+body {
+  width: 100%;
+  margin: 0 auto;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+.page { 
+    background-image: url(/emixed_975cad33d6c911f0b6e2aae71fe8e288_438633371_generation_0.jpeg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
